fixed background on mobile broke desktop!

--- a/assets/css/leftlogic.css
+++ b/assets/css/leftlogic.css
@@ -56,6 +56,9 @@ section, aside, header, footer, nav {
   font-weight: normal;
 }
 
+html * {
+  color-profile: sRGB;
+}
 
 /*@font-face {
   font-family: 'leftdierma1';
@@ -228,7 +231,7 @@ fieldset textarea {
   border-right: 20px solid #FFF1DA;
   background-image: url("/assets/images/bg-texture.jpg");
   background-position: 0 50%;
-  background-size: cover;
+  /*background-size: cover;*/
   background-repeat: repeat-y;
   background-color: #EE6702;
   overflow: hidden;
